# imu_ahrs

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/: imu_ahrs.hpp  slerp.hpp
include/mahony/: MahonyAHRS.cpp  MahonyAHRS.h
launch/: imu_ahrs.launch.py
src/: imu_ahrs.cpp
