<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>imu_ahrs</name>
  <version>0.0.0</version>
  <description>publishing sensor_msgs/Imu from separated imu data</description>

  <maintainer email="ardcxvsk@gmail.com">lee-sunkyoung</maintainer>
  <author email="ardcxvsk@gmail.com">lee-sunkyoung</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>Eigen3</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
